logs/tgapp-tgcomments.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/Tempita-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/TurboGears2-2.3.11.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/crank'...
Listing './lib/python3.5/site-packages/crank-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/gearbox'...
Listing './lib/python3.5/site-packages/gearbox/commands'...
Listing './lib/python3.5/site-packages/gearbox/commands/basic_package'...
Listing './lib/python3.5/site-packages/gearbox/commands/basic_package/template'...
Listing './lib/python3.5/site-packages/gearbox/commands/basic_package/template/+package+'...
Listing './lib/python3.5/site-packages/gearbox/utils'...
Listing './lib/python3.5/site-packages/gearbox-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tempita'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/__init__.py'...
Listing './lib/python3.5/site-packages/tests/fixtures'...
Listing './lib/python3.5/site-packages/tests/fixtures/package_with_helpers_submodule'...
Listing './lib/python3.5/site-packages/tests/fixtures/package_with_helpers_submodule/lib'...
Listing './lib/python3.5/site-packages/tests/test_stack'...
Listing './lib/python3.5/site-packages/tests/test_stack/config'...
Listing './lib/python3.5/site-packages/tests/test_stack/config/controllers'...
Listing './lib/python3.5/site-packages/tests/test_stack/dispatch'...
Listing './lib/python3.5/site-packages/tests/test_stack/dispatch/controllers'...
Listing './lib/python3.5/site-packages/tests/test_stack/fixture'...
Listing './lib/python3.5/site-packages/tests/test_stack/lib'...
Listing './lib/python3.5/site-packages/tests/test_stack/lib/templatetools'...
Listing './lib/python3.5/site-packages/tests/test_stack/rendering'...
Listing './lib/python3.5/site-packages/tests/test_stack/rendering/controllers'...
Listing './lib/python3.5/site-packages/tests/test_stack/rendering/templates'...
Listing './lib/python3.5/site-packages/tests/test_stack/rendering/templates/sub'...
Listing './lib/python3.5/site-packages/tg'...
Listing './lib/python3.5/site-packages/tg/appwrappers'...
Listing './lib/python3.5/site-packages/tg/configuration'...
Listing './lib/python3.5/site-packages/tg/configuration/auth'...
Listing './lib/python3.5/site-packages/tg/configuration/mongo'...
Listing './lib/python3.5/site-packages/tg/configuration/sqla'...
Listing './lib/python3.5/site-packages/tg/controllers'...
Listing './lib/python3.5/site-packages/tg/renderers'...
Listing './lib/python3.5/site-packages/tg/support'...
Listing './lib/python3.5/site-packages/tg/templates'...
Listing './lib/python3.5/site-packages/tg/util'...
Listing './lib/python3.5/site-packages/tgapp_tgcomments-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/tgcomments'...
Compiling './lib/python3.5/site-packages/tgcomments/bootstrap.py'...
***   File "./lib/python3.5/site-packages/tgcomments/bootstrap.py", line 8
    print 'Bootstrapping tgcomments...'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tgcomments/controllers'...
Listing './lib/python3.5/site-packages/tgcomments/lib'...
Listing './lib/python3.5/site-packages/tgcomments/model'...
Listing './lib/python3.5/site-packages/tgcomments/public'...
Listing './lib/python3.5/site-packages/tgcomments/public/css'...
Listing './lib/python3.5/site-packages/tgcomments/public/images'...
Listing './lib/python3.5/site-packages/tgcomments/templates'...
Listing './lib/python3.5/site-packages/tgext'...
Listing './lib/python3.5/site-packages/tgext/datahelpers'...
Compiling './lib/python3.5/site-packages/tgext/datahelpers/attachments.py'...
***   File "./lib/python3.5/site-packages/tgext/datahelpers/attachments.py", line 44
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tgext/pluggable'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/alembic_migration'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/alembic_migration/template'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/alembic_migration/template/versions'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/plug'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/quickstart'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/quickstart/template'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/quickstart/template/+package+'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/quickstart/template/+package+/controllers'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/quickstart/template/+package+/i18n'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/quickstart/template/+package+/lib'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/quickstart/template/+package+/model'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/quickstart/template/+package+/public'...
Listing './lib/python3.5/site-packages/tgext/pluggable/commands/quickstart/template/+package+/templates'...
Listing './lib/python3.5/site-packages/tgext/pluggable/ming'...
Listing './lib/python3.5/site-packages/tgext/pluggable/sqla'...
Listing './lib/python3.5/site-packages/tgext.datahelpers-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/tgext.pluggable-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
